--- a/CleverHostel/HostelData/App.config
+++ b/CleverHostel/HostelData/App.config
@@ -49,5 +49,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="HostelModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=HostelData.data;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   
 </configuration>
