--- a/CleverHostel/HostelWpfApp/packages.config
+++ b/CleverHostel/HostelWpfApp/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
   <package id="EntityFramework.ru" version="6.1.3" targetFramework="net462" />
+  <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net462" />
 </packages>
