--- a/CleverHostel/HostelData/HostelData.csproj
+++ b/CleverHostel/HostelData/HostelData.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Model\Enums\Sex.cs" />
     <Compile Include="Model\Student\Student.cs" />
     <Compile Include="Model\Enums\Verdict.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
