--- a/CleverHostel/ClHsWinFormsApp/ClHsWinFormsApp.csproj
+++ b/CleverHostel/ClHsWinFormsApp/ClHsWinFormsApp.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Components\DataBaseControl.Designer.cs">
       <DependentUpon>DataBaseControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="ImportStudentsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ImportStudentsForm.Designer.cs">
+      <DependentUpon>ImportStudentsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -69,6 +75,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Components\DataBaseControl.resx">
       <DependentUpon>DataBaseControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ImportStudentsForm.resx">
+      <DependentUpon>ImportStudentsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
